syntax = "proto3";

package auth;

option go_package= "./proto";

service Auth {
  rpc CheckUser(CheckUserRequest) returns (CheckUserReply);
}
  
message CheckUserRequest {
  string userId = 1;
  string sessionId = 2;
}

message CheckUserReply {
  bool exists = 1;
}